--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 SHOPIFY_API_SECRET_KEY=""
 SHOPIFY_STOREFRONT_ACCESS_TOKEN=""
 SHOPIFY_STORE_DOMAIN="[your-shopify-store-subdomain].myshopify.com"
+AFRICASTALKING_USERNAME=""
+AFRICASTALKING_API_KEY=""
+AFRICASTALKING_SENDER_ID="COMMERCEPLATE"
