--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@next/swc-win32-x64-msvc": "^15.1.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.7",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
@@ -49,9 +51,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/js-cookie": "^3.0.6",
     "@types/marked": "^5.0.2",
-    "@types/node": "22.7.4",
+    "@types/node": "^22.13.4",
     "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
+    "@types/react-dom": "^19.0.4",
     "@types/react-gravatar": "^2.6.14",
     "@types/react-inner-image-zoom": "^3.0.3",
     "autoprefixer": "^10.4.20",
