--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,15 @@
 [build]
-publish = ".next"
-command = "yarn build"
-
-[functions]
-included_files = ["src/content/**"]
+  publish = ".next"
+  command = "yarn build"
 
 [build.environment]
-NODE_VERSION = "20"
+  NODE_VERSION = "20"
+
+[context.production.environment]
+  NODE_VERSION = "20"
+  NPM_FLAGS = "--version"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
