--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@next/swc-win32-x64-msvc": "npm:@next/swc-linux-x64-gnu@14.1.0"
   },
   "dependencies": {
+    "@next/swc-linux-x64-gnu": "^14.1.0",
     "@headlessui/react": "^2.1.8",
-    "@next/swc-win32-x64-msvc": "^15.1.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "clsx": "^2.1.1",
