--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   publish = ".next"
-  command = "yarn build"
+  command = "npm run build"
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 [build.environment]
   NODE_VERSION = "20"
