--- a/package.json
+++ b/package.json
@@ -54,13 +54,14 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.7.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/js-cookie": "^3.0.6",
     "@types/marked": "^5.0.2",
     "@types/node": "^22.13.4",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "@types/react-gravatar": "^2.6.14",
     "@types/react-inner-image-zoom": "^3.0.3",
     "autoprefixer": "^10.4.20",
