--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
 [build]
   publish = ".next"
-  command = "npm run build"
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+  command = "yarn build"
 
 [build.environment]
   NODE_VERSION = "20"
