--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  publish = ".next"
   command = "yarn build"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "20"
@@ -9,7 +9,5 @@
   NODE_VERSION = "20"
   NPM_FLAGS = "--version"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
