--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
-
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@netlify/plugin-nextjs": "^5.10.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "clsx": "^2.1.1",
