--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,9 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+# Redirect all routes to Next.js handler
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/next"
+  status = 200
