--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "yarn build"
-  publish = ".next/standalone/.next"
+  publish = ".next/standalone"
   functions = ".netlify/functions-internal"
 
 [build.environment]
