--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,7 @@
   NEXT_TELEMETRY_DISABLED = "1"
   NEXT_RUNTIME = "edge"
   NEXT_STANDALONE = "true"
+  NEXT_PUBLIC_NETLIFY = "true"
 
 [context.production.environment]
   NODE_VERSION = "20"
@@ -20,9 +21,13 @@
   NEXT_TELEMETRY_DISABLED = "1"
   NEXT_RUNTIME = "edge"
   NEXT_STANDALONE = "true"
+  NEXT_PUBLIC_NETLIFY = "true"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+  [plugins.inputs]
+    functions = ".netlify/functions-internal"
+    publish = ".next/standalone"
 
 # Handle Next.js static files
 [[redirects]]
