--- a/netlify.toml
+++ b/netlify.toml
@@ -25,6 +25,9 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+  [plugins.inputs]
+    functions = ".netlify/functions-internal"
+    publish = ".next/standalone"
 
 # Handle Next.js static files
 [[redirects]]
