--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "yarn build"
-  publish = ".next/standalone"
+  publish = ".next"
   functions = ".netlify/functions-internal"
 
 [build.environment]
@@ -8,7 +8,6 @@
   NEXT_USE_NETLIFY_EDGE = "true"
   NEXT_FORCE_EDGE_IMAGES = "true"
   NEXT_PRIVATE_TARGET = "server"
-  NEXT_PUBLIC_AVAILABLE_FOR_PREVIEW = "true"
 
 [context.production.environment]
   NODE_VERSION = "20"
@@ -43,13 +42,6 @@
 [[redirects]]
   from = "/_next/image*"
   to = "/.netlify/functions/next"
-  status = 200
-  force = true
-
-# Handle static assets
-[[redirects]]
-  from = "/_next/*"
-  to = "/_next/:splat"
   status = 200
   force = true
 
