--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,7 @@
   publish = ".next"
 
 [build.environment]
+  NEXT_USE_NETLIFY_EDGE = "true"
   NODE_VERSION = "20"
 
 [context.production.environment]
@@ -53,3 +54,11 @@
   to = "https://:subdomain.cdn.shopify.com/:splat"
   status = 200
   force = true
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
