--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,13 @@
 [build]
-  command = "yarn build"
+  command = "next build"
   publish = ".next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[build.environment]
+  NEXT_USE_NETLIFY_EDGE = "true"
+  NODE_VERSION = "20"
 
 # Force HTTPS
 [[redirects]]
