--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "next build"
+  command = "npm run build"
   publish = ".next"
 
 [[plugins]]
@@ -8,6 +8,7 @@
 [build.environment]
   NEXT_USE_NETLIFY_EDGE = "true"
   NODE_VERSION = "20"
+  NEXT_TELEMETRY_DISABLED = "1"
 
 # Force HTTPS
 [[redirects]]
