--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@netlify/plugin-nextjs": "^5.10.4",
+    "@opennextjs/cloudflare": "^1.0.0-beta.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "clsx": "^2.1.1",
