--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,7 @@
   NEXT_USE_NETLIFY_EDGE = "true"
   NODE_VERSION = "20"
   NEXT_TELEMETRY_DISABLED = "1"
+  NEXT_SHARP_PATH = "./node_modules/sharp"
 
 # Force HTTPS
 [[redirects]]
@@ -48,3 +49,4 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: *.shopify.com cdn.shopify.com; img-src 'self' data: blob: *.shopify.com cdn.shopify.com; connect-src 'self' *.shopify.com cdn.shopify.com;"
