--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@headlessui/react": "^2.1.8",
     "@netlify/plugin-nextjs": "^5.10.4",
     "@opennextjs/cloudflare": "^1.0.0-beta.2",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
@@ -63,9 +63,7 @@
     "@types/react-gravatar": "^2.6.14",
     "@types/react-inner-image-zoom": "^3.0.3",
     "autoprefixer": "^10.4.18",
-    "@eslint/config-array": "^2.1.0",
-    "@eslint/object-schema": "^2.0.1",
-    "eslint": "^9.0.0-rc.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "flat-cache": "^4.0.1",
     "glob": "^10.3.10",
