--- a/package.json
+++ b/package.json
@@ -22,61 +22,52 @@
     "@netlify/plugin-nextjs": "^5.10.4",
     "@opennextjs/cloudflare": "^1.0.0-beta.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.39.8",
+    "@supabase/supabase-js": "^2.49.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.0.14",
+    "framer-motion": "^12.4.7",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
-    "marked": "^12.0.1",
+    "marked": "^14.1.2",
     "multi-range-slider-react": "^2.0.7",
-    "next": "14.1.3",
-    "next-mdx-remote": "^4.4.1",
+    "next": "14.1.0",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
-    "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-collapsed": "^4.1.2",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-gravatar": "^2.6.3",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.3.0",
     "react-inner-image-zoom": "^3.0.2",
     "react-lite-youtube-embed": "^2.4.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "sharp": "^0.33.2",
-    "swiper": "^11.0.7",
-    "wrangler": "^3.22.3"
+    "sharp": "^0.33.5",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/js-cookie": "^3.0.6",
     "@types/marked": "^5.0.2",
-    "@types/node": "^20.11.28",
-    "@types/prop-types": "^15.7.11",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/node": "^22.13.4",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "^19.0.4",
     "@types/react-gravatar": "^2.6.14",
     "@types/react-inner-image-zoom": "^3.0.3",
-    "autoprefixer": "^10.4.18",
-    "@eslint/config-array": "^2.1.0",
-    "@eslint/object-schema": "^2.0.1",
-    "eslint": "^9.0.0-rc.0",
-    "eslint-config-next": "14.1.3",
-    "flat-cache": "^4.0.1",
-    "glob": "^10.3.10",
-    "lru-cache": "^10.2.0",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "rimraf": "^5.0.5",
-    "sass": "^1.71.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.11.1",
+    "eslint-config-next": "14.2.14",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "sass": "^1.79.4",
     "tailwind-bootstrap-grid": "^5.1.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "tailwindcss": "^3.4.13",
+    "typescript": "5.6.2"
   }
 }
